--- a/index.html
+++ b/index.html
@@ -78,7 +78,92 @@
 
   <!----------Main----------------->
   <main class="main">
+    <section class="home section" id="home">
+      <div class="home__container container grid section__border">
+        <div class="home__data grid">
+          <h1 class="home__title">Hi, I'm Dhuhon. <br> Web Developer</h1>
+          <div class="home__blob grid">
+            <div class="home__perfil">
+              <img src="./assets/img/header.png" alt="home image">
+            </div>
 
+            <img src="./assets/img/shape-waves.svg" alt="" class="home__shape-waves">
+            <img src="./assets/img/shape-circle.svg" alt="" class="home__shape-circles">
+          </div>
+          
+          <ul class="home__social">
+            <a href="#" target="_blank" class="home__social--link">
+              <i class="ri-github-line"></i>
+            </a>
+            <a href="#" target="_blank" class="home__social--link">
+              <i class="ri-linkedin-box-line"></i>
+            </a>
+            <a href="#" target="_blank" class="home__social--link">
+              <i class="ri-instagram-line"></i>
+            </a>
+          </ul>
+  
+        </div>
+
+        <div class="home__info">
+          <div>
+            <h3 class="home__info--title">
+              BIOGRAPHY
+            </h3>
+            <p class="home__info--description">
+              Hi, I'm Dhuhon. Web Developer.
+              Passionate about designing stunning web pages.
+              Let's work together.
+            </p>
+          </div>
+          <div>
+            <h3 class="home__info--title">
+              CONTACT
+            </h3>
+            <p class="home__info--description">
+              dhuhon@gmail.com
+              18762878095
+            </p>
+          </div>
+          <div>
+            <h3 class="home__info--title">
+              SERVICES
+            </h3>
+            <p class="home__info--description">
+              WEBSITE DESIGN <br>
+              UI/ UX Design <br>
+              SEO<nr></nr>
+            </p>
+          </div>
+        </div>
+
+          <div class="home__info">
+            <div>
+              <h3 class="home__info--title">
+                YEARS OF EXPERIENCE
+              </h3>
+              <p class="home__info--number">
+                08+
+              </p>
+            </div>
+            <div>
+              <h3 class="home__info--title">COMPLETED PROJECTS</h3>
+              <p class="home__info--number">24</p>
+            </div>
+            <div>
+              <h3 class="home__info--title">
+                COMPANIES WORKED
+              </h3>
+              <p class="home__info--number">
+                03+
+              </p>
+            </div>
+
+          </div>
+
+      </div>
+    </section>
+ 
 
   </main>
   <!----------Main----------------->
@@ -92,6 +177,8 @@
   </footer>
   <!----------Footer----------------->
 
+
+  <script  src="assets/js/main.js" type="text/javascript" ></script>
 
 </body>
 
