--- a/index.html
+++ b/index.html
@@ -162,6 +162,94 @@
           </div>
 
       </div>
+
+      <section class="skills section" id="skills">
+        <h2 class="section__title">Skills</h2>
+        <div class="section__subtitle">My Talents</div>
+        <div class="skills__container container grid section__border">
+          <div class="skills__content">
+            <h3 class="skills__title">
+              <i class="ri-braces-line"></i>Frontend Developer
+            </h3>
+            <div class="skills__info">
+              <div class="skills__data">
+                <div class="skills__blob">
+                  <img src="./assets/img/html-1.svg" alt="">
+                </div>
+                <h3 class="skills__name">HTML</h3>
+                <span class="skills__subtitle">Intermediate</span>
+              </div>
+              <div class="skills__data">
+                <div class="skills__blob">
+                  <img src="./assets/img/css-3.svg" alt="">
+                </div>
+                <h3 class="skills__name">CSS</h3>
+                <span class="skills__subtitle">Advanced</span>
+              </div>
+              <div class="skills__data">
+                <div class="skills__blob">
+                  <img src="./assets/img/logo-javascript.svg" alt="">
+                </div>
+                <h3 class="skills__name">JavaScript</h3>
+                <span class="skills__subtitle">Intermediate</span>
+              </div>
+              <div class="skills__data">
+                <div class="skills__blob">
+                  <img src="./assets/img/react-2.svg" alt="">
+                </div>
+                <h3 class="skills__name">React</h3>
+                <span class="skills__subtitle">Basic</span>
+              </div>
+
+              <div class="skills__data">
+                <div class="skills__blob">
+                  <img src="./assets/img/git-icon.svg" alt="">
+                </div>
+                <h3 class="skills__name">Git</h3>
+                <span class="skills__subtitle">Basic</span>
+              </div>
+            </div>
+          </div>
+          <!--SKILLS 2-->
+          <div class="skills__content">
+            <h3 class="skills__title">
+              <i class="ri-pantone-line"></i>Web Designer
+            </h3>
+            <div class="skills__info">
+              <div class="skills__data">
+                <div class="skills__blob">
+                  <img src="./assets/img/figma-1.svg" alt="">
+                </div>
+                <h3 class="skills__name">Figma</h3>
+                <span class="skills__subtitle">Basic</span>
+              </div>
+              <div class="skills__data">
+                <div class="skills__blob">
+                  <img src="./assets/img/sketch-2.svg" alt="">
+                </div>
+                <h3 class="skills__name">Sketch</h3>
+                <span class="skills__subtitle">Basic</span>
+              </div>
+              <div class="skills__data">
+                <div class="skills__blob">
+                  <img src="./assets/img/adobe-xd-1.svg" alt="">
+                </div>
+                <h3 class="skills__name">Adobe XD</h3>
+                <span class="skills__subtitle">Basic</span>
+              </div>
+              <div class="skills__data">
+                <div class="skills__blob">
+                  <img src="./assets/img/adobe-photoshop-2.svg" alt="">
+                </div>
+                <h3 class="skills__name">Photoshop</h3>
+                <span class="skills__subtitle">Basic</span>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+      </section>
     </section>
  
 
