--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
 
       </div>
 
+    </section>
+
       <section class="skills section" id="skills">
         <h2 class="section__title">Skills</h2>
         <div class="section__subtitle">My Talents</div>
@@ -250,7 +252,72 @@
         </div>
 
       </section>
-    </section>
+
+      <section class="qualification section"  id="qualifications"  >
+        <h2 class="section__title"> 
+          Qualification
+        </h2>
+        <span class="section__subtitle">Experience & Education</span>
+        <div class="qualification__container container grid section__border">
+          <div class="qualification__content">
+            <h3 class="qualification__title">
+             <i class="ri-pencil-ruler-2-line"></i> Education
+            </h3>
+            <div class="qualification__info">
+              <div>
+                <h3 class="qualification__name">
+                  Bachelor of Science in Computing
+                </h3>
+                <span class="qualification__country">UTECH</span>
+                <span class="qualification__year">2012 - 2016</span>
+              </div>
+
+              <div>
+                <h3 class="qualification__name">
+                 CXC
+                </h3>
+                <span class="qualification__country">KC</span>
+                <span class="qualification__year">2012</span>
+              </div>
+            </div>
+          </div>
+          <div class="qualification__content">
+            <h3 class="qualification__title">
+             <i class="ri-building-line"></i> Work
+            </h3>
+            <div class="qualification__info">
+              <div>
+                <h3 class="qualification__name">Help Desk Support LEVEL 2</h3>
+                <span class="qualification__country">KPMG</span>
+                <span class="qualification__year">2021 - Present</span>
+              </div>
+              <div>
+                <h3 class="qualification__name">Junior System Administrator</h3>
+                <span class="qualification__country">CCCJ</span>
+                <span class="qualification__year">2017-2021</span>
+              </div>
+            </div>
+          </div>
+          
+        </div>
+
+        <img src="./assets/img/shape-circle.svg" alt="" class="qualification__img">
+      </section>
+
+      <section class="services section" id="services">
+        <h2 class="section__title">Services</h2>
+        <span class="section__subtitle">
+          What I Offer
+        </span>
+
+        <div class="services__container container grid section__border">
+          <div class="services__card">
+            <i class="ri-layout-4-line"></i>
+            <h2 class="services__title">UI/UX <br> Designer</h2>
+          </div>
+        </div>
+      </section>
+
  
 
   </main>
