--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
 
       <div class="nav__buttons">
-        <!--<i class="ri-moon-line change-theme" id="theme-button"></i>-->
+        <i class="ri-moon-line change-theme" id="theme-button"></i>
 
         <div class="nav__toggle" id="nav-toggle">
           <i class="ri-menu-4-line"></i>
@@ -518,6 +518,7 @@
 
   <script src="./assets/js/swiper-bundle.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  
   <script src="assets/js/main.js" type="text/javascript"></script>
 
 </body>
